# minihf

./: .gitignore  pyproject.toml  weave.py
agent/: .env  analysis.txt  analyze_ciphertext.py  cipher.txt  llm_cache.db  solver.py  test_solver.py  weave.py  weave_agent.py
