[tool.poetry]
name = "minihf"
version = "0.1.0"
description = ""
authors = ["JohnPeng47 <johnpeng47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-core = "^0.3.28"
langchain-openai = "^0.2.14"
langchain-anthropic = "^0.3.1"
pydantic = "^2.10.4"
tiktoken = "^0.8.0"
requests = "^2.32.3"
torch = "^2.5.1"
jsonschema = "^4.23.0"
tqdm = "^4.67.1"
rich = "^13.9.4"
transformers = "^4.47.1"
tantivy = "^0.22.0"
aiohttp = "^3.11.11"
django = "^5.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
